Fix contrast

--- a/css/python-gsoc.css
+++ b/css/python-gsoc.css
@@ -66,7 +66,7 @@ label {
 
 /* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #489eba;
+    color: #295E70;
 }
 
 .content-subhead i {
