--- a/css/side-menu.css
+++ b/css/side-menu.css
@@ -1,5 +1,5 @@
 body {
-    color: #777;
+    color: #666;
 }
 
 .pure-img-responsive {
